Fix size elements visualization

--- a/app/views/grid/layout.html.erb
+++ b/app/views/grid/layout.html.erb
@@ -2,7 +2,7 @@
     Generation: <%= @generation %>
     <br>
     <% @size.each do |el| %>
-        <%= @el %>
+        <span><%= el %></span>
     <% end %>
     <br>
     <table>
